fix : Show download dialog on emulator (#1869)
* fix : Remove active internet check
* fix : Remove ShowNotificationSnackbar method which is redundant
* fix : Remove redundant Notification class 
* feat : Create View util method for SwipeRefreshLayout

--- a/android/app/src/main/assets/config.json
+++ b/android/app/src/main/assets/config.json
@@ -1,6 +1,6 @@
 {
   "email": "dev@fossasia.org",
   "app-name": "Open Event",
-  "api-link": "https://open-event-api.herokuapp.com/v1/events/59/",
+  "api-link": "https://open-event-api.herokuapp.com/v1/events/173",
   "is-auth-enabled": true
 }
