--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.jakewharton:butterknife:8.5.1'
@@ -133,6 +134,7 @@ dependencies {
     // Unit Test
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
+    testCompile 'org.threeten:threetenbp:1.3.6'
 
     //Instrumentation Test
     androidTestCompile "com.android.support:support-annotations:${SUPPORT_LIB_VERSION}"
