--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,30 +3,23 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath 'com.trickyandroid:jacoco-everywhere:0.2.1'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'io.realm:realm-gradle-plugin:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'io.realm:realm-gradle-plugin:3.7.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-plugins {
-    id "me.tatarka.retrolambda" version "3.6.0"
-}
-
 allprojects {
     repositories {
         jcenter()
+        google()
         mavenCentral()
         maven {
             url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
-        }
-        maven {
-            url 'https://maven.google.com'
         }
     }
 }
