--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.uphyca:stetho_realm:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.github.yalantis:ucrop:2.2.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     compileOnly "org.projectlombok:lombok:1.16.18"
     annotationProcessor "org.projectlombok:lombok:1.16.18"
