--- a/android/app/src/main/assets/config.json
+++ b/android/app/src/main/assets/config.json
@@ -1,6 +1,7 @@
 {
+
   "email": "dev@fossasia.org",
   "app-name": "Open Event",
-  "api-link": "https://open-event-api.herokuapp.com/v1/events/173",
+  "api-link": "https://open-event-api-dev.herokuapp.com/v1/events/173",
   "is-auth-enabled": true
 }
