--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
 
 def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
@@ -8,8 +11,8 @@ def isTravis = "true" == System.getenv("TRAVIS")
 def preDexEnabled = "true" == System.getProperty("pre-dex", "true")
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion rootProject.sdkVersion
+    buildToolsVersion rootProject.buildTools
 
     dexOptions {
         // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
@@ -22,8 +25,8 @@ android {
 
     defaultConfig {
         applicationId "org.fossasia.openevent"
-        minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion rootProject.sdkVersion
+        minSdkVersion rootProject.minSdkVersion
         versionCode 101
         versionName "1.0.1"
 
@@ -67,6 +70,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    androidExtensions {
+        experimental = true
+    }
+
     sourceSets.test.resources.srcDirs += ["src/main/assets"]
 }
 
@@ -88,6 +95,10 @@ dependencies {
     implementation "com.android.support:customtabs:${SUPPORT_LIB_VERSION}"
     implementation "com.android.support:palette-v7:${SUPPORT_LIB_VERSION}"
     implementation 'com.android.support:multidex:1.0.2'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation project(':data')
+    
     implementation 'com.github.jasminb:jsonapi-converter:0.7'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
@@ -107,9 +118,7 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     implementation "android.arch.lifecycle:reactivestreams:1.0.0"
-    compileOnly "org.projectlombok:lombok:1.16.18"
-    annotationProcessor "org.projectlombok:lombok:1.16.18"
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    kapt 'com.jakewharton:butterknife-compiler:8.6.0'
 
     // Googleplay Variant
     googleplayImplementation 'com.google.android.gms:play-services-maps:11.8.0'
