--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+project.ext.sdkVersion = 27
+project.ext.minSdkVersion = 16
+project.ext.buildTools = '27.0.3'
+
 buildscript {
+    ext.kotlin_version = '1.2.30'
     repositories {
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'io.realm:realm-gradle-plugin:3.7.2'
+        classpath 'io.realm:realm-gradle-plugin:5.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
