chore: change gradle compile dependencies to implementation (#2389)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,5 +154,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.0.0"
 
     //Zoomable image view
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
