--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,7 +83,7 @@ configurations.all {
     }
 }
 
-def SUPPORT_LIB_VERSION = "27.0.2"
+def SUPPORT_LIB_VERSION = "27.1.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -94,35 +94,34 @@ dependencies {
     implementation "com.android.support:design:${SUPPORT_LIB_VERSION}"
     implementation "com.android.support:customtabs:${SUPPORT_LIB_VERSION}"
     implementation "com.android.support:palette-v7:${SUPPORT_LIB_VERSION}"
-    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation project(':data')
     
-    implementation 'com.github.jasminb:jsonapi-converter:0.7'
+    implementation 'com.github.jasminb:jsonapi-converter:0.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
     implementation 'com.squareup:otto:1.3.8'
-    implementation 'com.jakewharton.timber:timber:4.5.1'
-    implementation 'com.jakewharton:butterknife:8.6.0'
+    implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.uphyca:stetho_realm:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.github.yalantis:ucrop:2.2.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
-    implementation "android.arch.lifecycle:reactivestreams:1.0.0"
-    kapt 'com.jakewharton:butterknife-compiler:8.6.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     // Googleplay Variant
-    googleplayImplementation 'com.google.android.gms:play-services-maps:11.8.0'
-    googleplayImplementation 'com.google.android.gms:play-services-location:11.8.0'
+    googleplayImplementation 'com.google.android.gms:play-services-maps:12.0.0'
+    googleplayImplementation 'com.google.android.gms:play-services-location:12.0.0'
     googleplayImplementation 'com.google.maps.android:android-maps-utils:0.4'
 
     // Fdroid Variant
@@ -135,7 +134,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.13.0'
     testImplementation 'org.threeten:threetenbp:1.3.6'
 
-    //Instrumentation Test
+    // Instrumentation Test
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -145,14 +144,15 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
-    //Branch integration for deep linking
+    // Branch integration for deep linking
     implementation ('io.branch.sdk.android:library:2.5.9') {
         exclude module: 'answers-shim'
     }
 
-    //ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.0.0"
+    // Architecture Components
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.0"
 
-    //Zoomable image view
+    // Zoomable image view
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
