feat: Add fast scroller in speakerslistfragment (#2394)
* added scroll bar in speakerslistfragment

* fixed crash in fast scroll

* removed unused imports

* added constants for sort types

* code refactor

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,4 +155,7 @@ dependencies {
 
     // Zoomable image view
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
+    // fast scroll rv
+    implementation 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
 }
